Fix icon alignment

--- a/studio/plugins/dashboard-widget-structure-menu/src/components/StructureMenuWidget.css
+++ b/studio/plugins/dashboard-widget-structure-menu/src/components/StructureMenuWidget.css
@@ -38,3 +38,7 @@
 .iconWrapper {
   font-size: 2em;
 }
+
+.iconWrapper svg {
+  display: inline;
+}
